--- a/test.html
+++ b/test.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test Page</title>
     <link rel="stylesheet" href="./test.css">
+    <link rel="icon" href="./icons/logo.svg" type="image/x-icon">
 </head>
 
 <body>
